--- a/sources/api/migration/migrations/v1.3.0/control-container-v0-5-2/Cargo.toml
+++ b/sources/api/migration/migrations/v1.3.0/control-container-v0-5-2/Cargo.toml
@@ -9,4 +9,4 @@ publish = false
 exclude = ["README.md"]
 
 [dependencies]
-migration-helpers = { path = "../../../migration-helpers" }
+migration-helpers = { path = "../../../migration-helpers", version = "0.1.0" }
