--- a/sources/api/static-pods/Cargo.toml
+++ b/sources/api/static-pods/Cargo.toml
@@ -10,11 +10,11 @@ build = "build.rs"
 exclude = ["README.md"]
 
 [dependencies]
-constants = { path = "../../constants" }
+constants = { path = "../../constants", version = "0.1.0" }
 base64 = "0.13"
 log = "0.4"
-models = { path = "../../models" }
-schnauzer = { path = "../schnauzer" }
+models = { path = "../../models", version = "0.1.0" }
+schnauzer = { path = "../schnauzer", version = "0.1.0" }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1"
 simplelog = "0.10"
