--- a/sources/api/apiserver/Cargo.toml
+++ b/sources/api/apiserver/Cargo.toml
@@ -11,14 +11,14 @@ exclude = ["README.md"]
 
 [dependencies]
 actix-web = { version = "4.0.0-beta.5", default-features = false }
-bottlerocket-release = { path = "../../bottlerocket-release" }
-datastore = { path = "../datastore" }
+bottlerocket-release = { path = "../../bottlerocket-release", version = "0.1.0" }
+datastore = { path = "../datastore", version = "0.1.0" }
 fs2 = "0.4.3"
 futures = { version = "0.3", default-features = false }
 http = "0.2.1"
 libc = "0.2"
 log = "0.4"
-models = { path = "../../models" }
+models = { path = "../../models", version = "0.1.0" }
 nix = "0.22"
 num = "0.4"
 percent-encoding = "2.1"
@@ -27,7 +27,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 simplelog = "0.10"
 snafu = "0.6"
-thar-be-updates = { path = "../thar-be-updates" }
+thar-be-updates = { path = "../thar-be-updates", version = "0.1.0" }
 walkdir = "2.2"
 
 [build-dependencies]
