--- a/sources/api/early-boot-config/Cargo.toml
+++ b/sources/api/early-boot-config/Cargo.toml
@@ -10,13 +10,13 @@ build = "build.rs"
 exclude = ["README.md"]
 
 [dependencies]
-apiclient = { path = "../apiclient" }
+apiclient = { path = "../apiclient", version = "0.1.0" }
 async-trait = "0.1.36"
 base64 = "0.13"
-constants = { path = "../../constants" }
+constants = { path = "../../constants", version = "0.1.0" }
 flate2 = { version = "1.0", default-features = false, features = ["rust_backend"] }
 http = "0.2"
-imdsclient = { path = "../../imdsclient" }
+imdsclient = { path = "../../imdsclient", version = "0.1.0" }
 log = "0.4"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1"
