--- a/sources/api/ecs-settings-applier/Cargo.toml
+++ b/sources/api/ecs-settings-applier/Cargo.toml
@@ -10,10 +10,10 @@ build = "build.rs"
 exclude = ["README.md"]
 
 [dependencies]
-constants = { path = "../../constants" }
+constants = { path = "../../constants", version = "0.1.0" }
 serde = {version = "1.0", features = ["derive"]}
 serde_json = "1"
-schnauzer = { path = "../schnauzer" }
+schnauzer = { path = "../schnauzer", version = "0.1.0" }
 log = "0.4"
 snafu = "0.6"
 tokio = { version = "~1.8", default-features = false, features = ["macros", "rt-multi-thread"] }  # LTS
