--- a/sources/api/migration/migration-helpers/Cargo.toml
+++ b/sources/api/migration/migration-helpers/Cargo.toml
@@ -9,10 +9,10 @@ publish = false
 exclude = ["README.md"]
 
 [dependencies]
-bottlerocket-release = { path = "../../../bottlerocket-release" }
-datastore = { path = "../../datastore" }
+bottlerocket-release = { path = "../../../bottlerocket-release", version = "0.1.0" }
+datastore = { path = "../../datastore", version = "0.1.0" }
 handlebars = "4.1"
-schnauzer = { path = "../../schnauzer" }
+schnauzer = { path = "../../schnauzer", version = "0.1.0" }
 serde = "1.0.104"
 serde_json = "1.0"
 snafu = "0.6"
