--- a/sources/api/schnauzer/Cargo.toml
+++ b/sources/api/schnauzer/Cargo.toml
@@ -10,16 +10,16 @@ build = "build.rs"
 exclude = ["README.md"]
 
 [dependencies]
-apiclient = { path = "../apiclient" }
+apiclient = { path = "../apiclient", version = "0.1.0" }
 base64 = "0.13"
-constants = { path = "../../constants" }
-bottlerocket-release = { path = "../../bottlerocket-release" }
+constants = { path = "../../constants", version = "0.1.0" }
+bottlerocket-release = { path = "../../bottlerocket-release", version = "0.1.0" }
 dns-lookup = "1.0"
 handlebars = "4.1"
 http = "0.2"
 lazy_static = "1.4"
 log = "0.4"
-models = { path = "../../models" }
+models = { path = "../../models", version = "0.1.0" }
 percent-encoding = "2.1"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1"
