--- a/sources/api/shibaken/Cargo.toml
+++ b/sources/api/shibaken/Cargo.toml
@@ -11,7 +11,7 @@ exclude = ["README.md"]
 
 [dependencies]
 base64 = "0.13"
-imdsclient = { path = "../../imdsclient" }
+imdsclient = { path = "../../imdsclient", version = "0.1.0" }
 log = "0.4"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1"
