--- a/sources/api/storewolf/Cargo.toml
+++ b/sources/api/storewolf/Cargo.toml
@@ -10,11 +10,11 @@ build = "build.rs"
 exclude = ["README.md"]
 
 [dependencies]
-constants = { path = "../../constants" }
-bottlerocket-release = { path = "../../bottlerocket-release" }
-datastore = { path = "../datastore" }
+constants = { path = "../../constants", version = "0.1.0" }
+bottlerocket-release = { path = "../../bottlerocket-release", version = "0.1.0" }
+datastore = { path = "../datastore", version = "0.1.0" }
 log = "0.4"
-models = { path = "../../models" }
+models = { path = "../../models", version = "0.1.0" }
 rand = { version = "0.8", default-features = false, features = ["std", "std_rng"] }
 semver = "1.0"
 simplelog = "0.10"
@@ -23,13 +23,13 @@ toml = "0.5"
 
 [build-dependencies]
 cargo-readme = "3.1"
-merge-toml = { path = "merge-toml" }
+merge-toml = { path = "merge-toml", version = "0.1.0" }
 # We have a models build-dep because we read default settings from the models
 # directory and need its build.rs to run first; we also reflect the dependency
 # with cargo:rerun-if-changed statements in our build.rs.  The models build.rs
 # runs twice, once for the above dependency and once for this build-dependency,
 # so it's important that it remains reentrant.
-models = { path = "../../models" }
+models = { path = "../../models", version = "0.1.0" }
 snafu = "0.6"
 toml = "0.5"
 walkdir = "2"
