--- a/sources/api/thar-be-updates/Cargo.toml
+++ b/sources/api/thar-be-updates/Cargo.toml
@@ -10,14 +10,14 @@ build = "build.rs"
 exclude = ["README.md"]
 
 [dependencies]
-apiclient = { path = "../apiclient" }
-constants = { path = "../../constants" }
-bottlerocket-release = { path = "../../bottlerocket-release" }
+apiclient = { path = "../apiclient", version = "0.1.0" }
+constants = { path = "../../constants", version = "0.1.0" }
+bottlerocket-release = { path = "../../bottlerocket-release", version = "0.1.0" }
 chrono = { version = "0.4.11", features = [ "serde" ] }
 fs2 = "0.4.3"
 http = "0.2.1"
 log = "0.4.8"
-models = { path = "../../models" }
+models = { path = "../../models", version = "0.1.0" }
 nix = "0.22"
 num-derive = "0.3.0"
 num-traits = "0.2.12"
@@ -25,12 +25,12 @@ semver = { version = "1.0", features = [ "serde" ] }
 serde = { version = "1.0.111", features = [ "derive" ] }
 serde_json = "1.0.53"
 serde_plain = "1.0"
-signpost = { path = "../../updater/signpost" }
+signpost = { path = "../../updater/signpost", version = "0.1.0" }
 simplelog = "0.10"
 snafu = "0.6.8"
 tempfile = "3.1.0"
 tokio = { version = "~1.8", default-features = false, features = ["macros", "rt-multi-thread"] }  # LTS
-update_metadata = { path = "../../updater/update_metadata" }
+update_metadata = { path = "../../updater/update_metadata", version = "0.1.0" }
 
 [build-dependencies]
 cargo-readme = "3.1"
