--- a/sources/ghostdog/Cargo.toml
+++ b/sources/ghostdog/Cargo.toml
@@ -13,7 +13,7 @@ argh = "0.1.3"
 gptman = { version = "0.6.1", default-features = false }
 hex-literal = "0.3.0"
 lazy_static = "1.2"
-signpost = { path = "../updater/signpost" }
+signpost = { path = "../updater/signpost", version = "0.1.0" }
 snafu = "0.6"
 
 [build-dependencies]
