--- a/sources/prairiedog/Cargo.toml
+++ b/sources/prairiedog/Cargo.toml
@@ -12,7 +12,7 @@ exclude = ["README.md"]
 argh = "0.1.3"
 log = "0.4"
 nix = "0.22"
-signpost = { path = "../updater/signpost" }
+signpost = { path = "../updater/signpost", version = "0.1.0" }
 simplelog = "0.10"
 snafu = "0.6"
 
