--- a/sources/updater/signpost/Cargo.toml
+++ b/sources/updater/signpost/Cargo.toml
@@ -10,7 +10,7 @@ exclude = ["README.md"]
 
 [dependencies]
 bit_field = "0.10.0"
-block-party = { path = "../block-party" }
+block-party = { path = "../block-party", version = "0.1.0" }
 gptman = { version = "0.6.1", default-features = false }
 hex-literal = "0.3.0"
 serde = { version = "1.0.91", features = ["derive"] }
