kernel: include microcode in bundled firmware
Signed-off-by: Ben Cressey <bcressey@amazon.com>

--- a/packages/kernel-5.10/Cargo.toml
+++ b/packages/kernel-5.10/Cargo.toml
@@ -15,3 +15,6 @@ path = "pkg.rs"
 # Use latest-srpm-url.sh to get this.
 url = "https://cdn.amazonlinux.com/blobstore/2463ceff87cbe05e736813f33f5a8b70f9c98effe9eb5167fa613fae1fb9a943/kernel-5.10.68-62.173.amzn2.src.rpm"
 sha512 = "42bca6a73a9d6ddae9553f1d71d4f28d436d813b1068f270fe2ae80701201b88946dc3c094829c90f62fc4894910867d7afeccdfbe2abf3a19848fc4c28d51b9"
+
+[build-dependencies]
+microcode = { path = "../microcode" }
