Extract retry-read to new crate

--- a/packages/os/Cargo.toml
+++ b/packages/os/Cargo.toml
@@ -19,7 +19,8 @@ source-groups = [
     "webpki-roots-shim",
     "logdog",
     "models",
-    "imdsclient"
+    "imdsclient",
+    "retry-read",
 ]
 
 [lib]
