--- a/Release.toml
+++ b/Release.toml
@@ -74,3 +74,6 @@ version = "1.3.0"
     "migrate_v1.3.0_hostname-affects-etc-hosts.lz4",
     "migrate_v1.3.0_control-container-v0-5-2.lz4",
 ]
+"(1.3.0, 1.4.0)" = [
+    "migrate_v1.4.0_registry-mirror-representation.lz4",
+]
