glibc: include ld.so.conf.d/* to build ld cache
This commit adds a configuration file for ldconfig to read additional
configurations from /etc/ld.so.conf, which will be created at runtime by
the tmpfilesd daemon.

There are packages that create `ldconfig.d/*.conf` files using a
tmpfilesd file to cache additional libraries, thus `ldconfig.service`
has to run after the tmpfilesd daemon creates the files.

Signed-off-by: Arnaldo Garcia Rincon <agarrcia@amazon.com>

--- a/packages/glibc/glibc-tmpfiles.conf
+++ b/packages/glibc/glibc-tmpfiles.conf
@@ -1,4 +1,5 @@
-f /etc/ld.so.conf 0644 root root -
+C /etc/ld.so.conf 0644 root root -
 f /etc/ld.so.cache 0644 root root -
+d /etc/ld.so.conf.d/ 0644 root root -
 d /run/cache/ldconfig 0700 root root -
 f /run/cache/ldconfig/aux-cache 0600 root root -
