sources: add driver dog
driverdog is a tool to link kernel modules at runtime, given a
configuration. The configuration must be provided per driver vendor, and
it is created at runtime by the tmpfilesd daemon, using a file
from the %{_cross_factorydir} directory.

Signed-off-by: Arnaldo Garcia Rincon <agarrcia@amazon.com>

--- a/packages/os/Cargo.toml
+++ b/packages/os/Cargo.toml
@@ -21,7 +21,8 @@ source-groups = [
     "models",
     "imdsclient",
     "retry-read",
-    "shimpei"
+    "shimpei",
+    "driverdog"
 ]
 
 [lib]
@@ -40,5 +41,7 @@ glibc = { path = "../glibc" }
 # kexec-tools and makedumpfile required for prairiedog functionality
 # kexec-tools = { path = "../kexec-tools" }
 # makedumpfile = { path = "../makedumpfile" }
+# binutils required for driverdog functionality
+# binutils = { path = "../binutils" }
 # oci-add-hooks required for shimpei functionality
 # oci-add-hooks = { path = "../oci-add-hooks" }
