--- a/packages/release/prepare-local.service
+++ b/packages/release/prepare-local.service
@@ -36,12 +36,15 @@ ExecStart=/usr/lib/systemd/systemd-growfs ${LOCAL_DIR}
 ExecStart=/usr/bin/mkdir -p ${LOCAL_DIR}/var ${LOCAL_DIR}/opt ${LOCAL_DIR}/mnt
 
 # Create the directories we need to set up a read-write overlayfs for the kernel
-# development sources.
-ExecStart=/usr/bin/rm -rf ${LOCAL_DIR}/var/lib/kernel-devel
+# development sources and the kernel modules
+ExecStart=/usr/bin/rm -rf ${LOCAL_DIR}/var/lib/kernel-devel \
+    %{LOCAL_DIR}/var/lib/kernel-modules
 ExecStart=/usr/bin/mkdir -p \
     ${LOCAL_DIR}/var/lib/kernel-devel/.overlay/lower \
     ${LOCAL_DIR}/var/lib/kernel-devel/.overlay/upper \
-    ${LOCAL_DIR}/var/lib/kernel-devel/.overlay/work
+    ${LOCAL_DIR}/var/lib/kernel-devel/.overlay/work \
+    ${LOCAL_DIR}/var/lib/kernel-modules/.overlay/upper \
+    ${LOCAL_DIR}/var/lib/kernel-modules/.overlay/work
 
 # Create the directories we need to set up a read-write overlayfs for any CNI
 # plugin binaries.
