--- a/sources/deny.toml
+++ b/sources/deny.toml
@@ -71,16 +71,11 @@ skip-tree = [
     # semver, for build vs. runtime dependencies.
     { name = "actix-http", version = "3.0.0-rc.1" },
 
-    # rusoto is using a different version of reqwest.
-    { name = "rusoto_core", version = "0.47.0" },
+    # reqwest uses an older rustls-pemfile
+    { name = "reqwest", version = "0.11.10" },
 ]
 
 [sources]
 # Deny crates from unknown registries or git repositories.
 unknown-registry = "deny"
 unknown-git = "deny"
-
-allow-git = [
-    # rusoto is patched with an upstream commit to support ap-southeast-3
-    "https://github.com/rusoto/rusoto.git",
-]
