--- a/packages/release/hosts.template
+++ b/packages/release/hosts.template
@@ -1,3 +1,4 @@
-127.0.0.1 localhost localhost.localdomain localhost4 localhost4.localdomain4
-::1 localhost localhost.localdomain localhost6 localhost6.localdomain6
-{{add_unresolvable_hostname settings.network.hostname}}
+127.0.0.1 localhost localhost.localdomain localhost4 localhost4.localdomain4 {{localhost_aliases "ipv4" settings.network.hostname settings.network.hosts}}
+::1 localhost localhost.localdomain localhost6 localhost6.localdomain6 {{localhost_aliases "ipv6" settings.network.hostname settings.network.hosts}}
+
+{{etc_hosts_entries settings.network.hosts}}
