packages: restart long-running systemd services
This adds the 'Restart' and 'RestartSec' directives to the following
services since they must be running even if they exit or are killed by
the OS:

- acpid
- vmtoolsd
- apiserver

Signed-off-by: Arnaldo Garcia Rincon <agarrcia@amazon.com>

--- a/packages/acpid/acpid.service
+++ b/packages/acpid/acpid.service
@@ -4,6 +4,8 @@ Description=ACPI event daemon
 [Service]
 Type=forking
 ExecStart=/usr/sbin/acpid -c /usr/lib/acpid/events
+Restart=always
+RestartSec=5
 
 [Install]
 WantedBy=preconfigured.target
