--- a/packages/open-vm-tools/vmtoolsd.service
+++ b/packages/open-vm-tools/vmtoolsd.service
@@ -5,6 +5,8 @@ ConditionVirtualization=vmware
 
 [Service]
 ExecStart=/usr/bin/vmtoolsd
+Restart=always
+RestartSec=5
 
 [Install]
 WantedBy=multi-user.target
